small edits to the new nav bar fixing spacing

--- a/src/App.css
+++ b/src/App.css
@@ -424,26 +424,26 @@
   background-color: var(--color-4);
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   border-bottom: 1px solid black;
-  padding: 45px 65px 45px 65px;
+  height: 140px;
+  padding: 0 10% 0 15%;
 }
 
 .navLinkContainer {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+  min-width: 250px;
 }
 
 .navLink {
   color: var(--neutral-gray-404040, #404040);
   text-align: center;
-  /* font-family: Urbanist; */
-  font-size: 25px;
+  font-size: 18px;
   color: black;
   text-decoration: none;
-  padding: 45px;
 }
 
 .navTitleContainer {
@@ -470,6 +470,7 @@
   right: -15px;
   bottom: -10px;
   line-height: 5px;
+  font-size: 15px;
 }
 
 #navDropdown {
